Adecuaciones para compatibilidad. Compilacion bajo Java 11 con compliance 8.